objects/Merge__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurvivorAccountId__c</fullName>
        <label>SurvivorAccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurvivorPartyId__c</fullName>
        <label>SurvivorPartyId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VictimAccountId__c</fullName>
        <label>VictimAccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VictimPartyId__c</fullName>
        <label>VictimPartyId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Merge</label>
    <listViews>
        <fullName>Admins_Merge_List</fullName>
        <columns>NAME</columns>
        <columns>SurvivorPartyId__c</columns>
        <columns>VictimPartyId__c</columns>
        <columns>VictimAccountId__c</columns>
        <columns>SurvivorAccountId__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Admins Merge List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>